<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">d-Connect Sample</string>
    <string name="action_access_token">Get AcessToken</string>
    <string name="action_settings">Settings</string>
    <string name="action_open_websocket">Open Websocket</string>
    <string name="action_plugins">Open Plugin List</string>
    <string name="docomo_social_service">docomo Cloud</string>
    <string name="external_social_service">External Social Service</string>
    <string name="twitter">twitter</string>
    <string name="facebook">facebook</string>
    <string name="googleplus">Google+</string>
    <string name="evernote">Evernote</string>
    <string name="dconnect_manager">d-Connect Manager</string>
    <string name="ssl">SSL</string>
    <string name="ssl_enabled">SSL Enabled</string>
    <string name="ssl_disabled">SSL Disabled</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="default_host">localhost</string>
    <string name="default_port">4035</string>
    <string name="general">General</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="not_logged_in">Not logged in yet</string>
    <string name="docomo_account">docomo ID</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="open_source_licenses_summary">Legal information about licenses</string>
    <string name="app_infomation_summary">Version %1$s</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="searching_device">Searching Devices&#8230;</string>
    <string name="refresh">Refresh</string>
    <string name="type">type</string>
    <string name="body">body</string>
    <string name="icon">icon</string>
    <string name="nothing">nothing</string>
    <string name="send">send</string>
    <string name="connection">Connection</string>
    <string name="wifi">Wi-Fi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_discoverable">Bluetooth discoverable</string>
    <string name="make_bluetooth_discoverable">To be bluetooth discoverable</string>
    <string name="ble">Bluetooth Low Energy</string>
    <string name="take_photo">Take a Picture</string>
    <string name="image_description">description</string>
    <string name="system">System</string>
    <string name="profile">Profile</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="random">Random</string>
    <string name="battery">Battery</string>
    <string name="level">Level</string>
    <string name="charging">Charging</string>
    <string name="chargingtime">Charging Time</string>
    <string name="dischargingtime">Discharging Time</string>
    <string name="back_button_label">Back</string>
    <string name="next_button_label">Next</string>
    <string name="skip_button_label">Skip</string>
    <string name="activity_failed_to_get_accesstoken">Failed to get access token.</string>
    <string name="fragment_extra_interface">interface</string>
    <string name="fragment_extra_attribute">attribute</string>
    <string name="fragment_extra_query">query</string>
    <string name="fragment_extra_request">Request</string>
    <string name="fragment_extra_response">Response</string>
    <string name="fragment_extra_send">Send</string>
    <string name="fragment_orientation_result">Response</string>
    <string name="fragment_orientation_event">Event</string>
    <string name="fragment_orientation_defalut">none</string>
    <string name="fragment_media_register_onphoto">OnPhoto Event</string>
    <string name="fragment_media_register_ondata">OnDataAvaiable Event</string>
    <string name="fragment_media_btn_register_ondata">Register OnDataAvaiable</string>
    <string name="fragment_media_btn_unregister_ondata">Unregister OnDataAvaiable</string>
    <string name="fragment_phone_1">1</string>
    <string name="fragment_phone_2">2</string>
    <string name="fragment_phone_3">3</string>
    <string name="fragment_phone_4">4</string>
    <string name="fragment_phone_5">5</string>
    <string name="fragment_phone_6">6</string>
    <string name="fragment_phone_7">7</string>
    <string name="fragment_phone_8">8</string>
    <string name="fragment_phone_9">9</string>
    <string name="fragment_phone_a">*</string>
    <string name="fragment_phone_0">0</string>
    <string name="fragment_phone_s">#</string>
    <string name="fragment_phone_result">Response</string>
    <string name="fragment_proximity_register_ondevice">OnDevice Event</string>
    <string name="fragment_vibration_pattern">Pattern</string>
    <string name="fragment_vibration_pattern_default">500,500,500</string>
    <string name="fragment_vibration_result">Response</string>
    <string name="register_event">Register</string>
    <string name="unregister_event">Unregister</string>
    <string name="dconnect_authorization">Authorization</string>
    <string name="authorization_client_id">Client Id</string>
    <string name="authorization_client_secret">Client Secret</string>
    <string name="authorization_access_token">Access Token</string>
    <string name="authorization_no_client_id">no data</string>
    <string name="authorization_no_client_secret">no data</string>
    <string name="authorization_no_access_token">no data</string>

    <string-array name="notification_type_list">
        <item>0: Incomming Voice Calling</item>
        <item>1: Incomming Mail</item>
        <item>2: Incomming SMS</item>
        <item>3: Event</item>
    </string-array>
    <string-array name="service_names">
        <item>Remote Camera</item>
        <item>Cloud Share</item>
        <item>Notifications</item>
        <item>Child Watcher</item>
        <item>Game Controller</item>
    </string-array>

</resources>