<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/action_access_token"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_access_token"/>
    <item
        android:id="@+id/action_open_websocket"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_open_websocket"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_plugins"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_plugins"/>

</menu>