<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/fragment_orientation_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_event" />

            <Button
                android:id="@+id/fragment_orientation_unregister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unregister_event" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/fragment_orientation_result" />

            <TextView
                android:id="@+id/fragment_orientation_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:ellipsize="middle"
                android:maxLines="10"
                android:scrollHorizontally="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/fragment_orientation_event" />

            <TextView
                android:id="@+id/fragment_orientation_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:ellipsize="middle"
                android:maxLines="10"
                android:scrollHorizontally="true" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>