<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/fragment_notification_service_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/send" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/fragment_notification_service_send"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/type" />

                <Spinner
                    android:id="@+id/fragment_notification_service_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/body" />

                <EditText
                    android:id="@+id/fragment_notification_service_body"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_weight="1"
                    android:hint="@string/body" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/icon" />

                <RadioGroup
                    android:id="@+id/fragment_notification_service_icon"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <RadioButton
                        android:id="@+id/fragment_notification_service_icon_nothing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/nothing" />

                    <RadioButton
                        android:id="@+id/fragment_notification_service_icon_red"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Red" />

                    <RadioButton
                        android:id="@+id/fragment_notification_service_icon_green"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Green" />

                    <RadioButton
                        android:id="@+id/fragment_notification_service_icon_blue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Blue" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>